--- a/src/scss/blocks/_reviews.scss
+++ b/src/scss/blocks/_reviews.scss
@@ -1,3 +1,45 @@
 .reviews {
     padding-bottom: 70px;
+    &__review{
+        margin-top: 70px;
+        display: flex;
+        img{
+            display: block;
+            width: 175px;
+            height: 175px;
+            margin: 15px 60px 67px 0;
+            border-radius: 84.5px;
+            background-color: #0d0d0d;
+        }
+    }
+    &__text {
+        flex-direction: column;
+    }
+    &__title {
+        text-transform: uppercase;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: left;
+        color: #0d0d0d;
+    }
+    &__subtitle {
+        text-transform: uppercase;
+        margin-top: 10px;
+        font-size: 14px;
+        font-weight: 300;
+        text-align: left;
+        color: #646464;
+    }
+    &__desc {
+        width: 650px;
+        margin-top: 20px;
+        display: block;
+        font-size: 16px;
+        font-weight: 300;
+        text-align: left;
+        color: #0d0d0d;
+    }
+    &__span {
+        margin-top: 8px;
+        }
 }
