--- a/src/scss/blocks/_forms.scss
+++ b/src/scss/blocks/_forms.scss
@@ -19,6 +19,9 @@
             margin-bottom: 20px;
         }
     }
+    &_mt25{
+      margin-top: 25px;
+    }
 }
 @media screen and (max-width: 767px) {
     .feed-form {
